# master-thesis-project

./: Makefile  README.md
model/: format-code.sh  pyproject.toml
model/data/c3o/: grep.tsv  kmeans.tsv  pagerank.tsv  sgd.tsv  sort.tsv
model/data/scout/: bayes.tsv  join.tsv  kmeans.tsv  lr.tsv  pagerank.tsv  regression.tsv
model/evaluation/: evaluation_utils.py  run_evaluation.sh  run_experiment.py  runtime_prediction_analysis.py
model/src/: config.py  experiment_utils.py  losses.py  model.py  pipeline.py  preparation.py  pretraining.py  splitting.py  transforms.py  utils.py
